syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc CheckStock (CheckStockRequest) returns (CheckStockResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message CheckStockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  bool available = 1;
  int32 current_stock = 2;
}

